# almagest-prototype

./: CMakeLists.txt
Demo/: Application.cpp  Application.h  CMakeLists.txt  Filesystem.cpp  Filesystem.h  Resources.cpp  main.cpp
Demo/Sources/: Application.cpp  Application.h  Filesystem.cpp  Filesystem.h  main.cpp
Demo/Sources/OGL/: Quad.cpp  Quad.h  Shader.cpp  Shader.h
Test1/: CMakeLists.txt  Resources.cpp  Resources.h  main.cpp
